[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aydin"
version = "2025.2.4"
description = "Aydin - Denoising but chill"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [{ name = "Royer Lab" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    # ML Libraries
    "catboost>=1.2.0,<2.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "tensorflow>=2.18.0,<3.0.0",
    "keras>=3.0.0,<4.0.0",
    "torch>=2.4.0,<3.0.0",
    # Scientific Computing
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "scikit-image>=0.22.0,<0.25.0",
    "numba>=0.59.0,<0.62.0",
    "PyWavelets>=1.6.0,<2.0.0",
    # Image I/O
    "imageio>=2.34.0,<3.0.0",
    "imagecodecs>=2024.1.0",
    "czifile>=2019.7.2",
    "nd2reader>=3.3.0",
    "zarr>=2.17.0,<3.0.0",
    # GUI
    "napari[pyqt6]>=0.5.0,<0.7.0",
    "QDarkStyle>=3.2.0,<4.0.0",
    "qtpy>=2.4.0,<3.0.0",
    # CLI & Utilities
    "Click>=8.1.0,<9.0.0",
    "gdown>=5.0.0,<6.0.0",
    "jsonpickle>=3.0.0,<4.0.0",
    "memoization>=0.4.0",
    "Deprecated>=1.2.13",
    "docstring-parser>=0.15",
    "arbol>=2023.1.0",
    "pynndescent>=0.5.10",
    "importlib-metadata>=6.0.0",
    "protobuf>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mock>=5.1.0",
    "pre-commit>=3.6.0",
]
bundle = [
    # Pinned versions for PyInstaller reproducibility
    # Build tools
    "pyinstaller>=6.0.0",
    # ML Libraries
    "catboost==1.2.7",
    "lightgbm==4.5.0",
    "tensorflow==2.18.0",
    "keras==3.6.0",
    "torch==2.4.1",
    # Scientific Computing
    "numpy==2.0.2",
    "scipy==1.14.1",
    "scikit-image==0.24.0",
    "numba==0.60.0",
    "PyWavelets==1.9.0",
    # Image I/O
    "imageio==2.36.0",
    # imagecodecs excluded - conflicts with PyInstaller bundling
    "czifile==2019.7.2",
    "nd2reader==3.3.0",
    "zarr==2.18.3",
    # GUI/Visualization
    "napari==0.5.4",
    "vispy>=0.14.0",
    "QDarkStyle==3.2.3",
    "qtpy==2.4.2",
    # Distributed computing (needed for spec file imports)
    "dask>=2024.1.0",
    "distributed>=2024.1.0",
    # CLI & Utilities
    "Click==8.1.7",
    "gdown==5.2.0",
    "jsonpickle==3.3.0",
    "memoization==0.4.0",
    "Deprecated==1.2.14",
    "docstring-parser==0.16",
    "pynndescent==0.5.13",
    "importlib-metadata==8.5.0",
    "protobuf==4.25.5",
]
docs = [
    "numpydoc>=1.6.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-multiversion>=0.2.4",
]

[project.scripts]
aydin = "aydin.cli.cli:cli"

[project.urls]
Homepage = "https://royerlab.github.io/aydin/"
Repository = "https://github.com/royerlab/aydin"

[tool.hatch.build.targets.wheel]
packages = ["aydin"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["aydin"]
markers = [
    "heavy: mark test as heavy (long-running)",
    "gpu: mark test as requiring GPU",
    "unstable: mark test as unstable/flaky",
]
addopts = "--disable-pytest-warnings"

[tool.coverage.run]
source = ["aydin"]
omit = ["aydin/**/demo/**", "aydin/**/test/**"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
