[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aydin"
dynamic = ["version"]
description = "Aydin — Self-supervised image denoising"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [{ name = "Royer Lab" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: napari",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    # ML Libraries
    "catboost>=1.2.5,<2.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "torch>=2.4.0,<3.0.0",
    # Scientific Computing
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "scikit-image>=0.22.0,<0.25.0",
    "numba>=0.59.0,<0.62.0",
    "PyWavelets>=1.6.0,<2.0.0",
    # Image I/O
    "imageio>=2.34.0,<3.0.0",
    "imagecodecs>=2024.1.1,<2026.0.0",
    "czifile>=2019.7.2,<2025.0.0",
    "nd2reader>=3.3.0,<4.0.0",
    "zarr>=2.17.0,<3.0.0",
    # GUI
    "napari[pyqt6]>=0.5.0,<0.8.0",
    "QDarkStyle>=3.2.0,<4.0.0",
    "qtpy>=2.4.0,<3.0.0",
    # CLI & Utilities
    "Click>=8.1.0,<9.0.0",
    "requests>=2.28.0,<3.0.0",
    "jsonpickle>=3.0.0,<4.0.0",
    "memoization>=0.4.0,<1.0.0",
    "Deprecated>=1.2.13,<2.0.0",
    "docstring-parser>=0.15,<1.0.0",
    "arbol>=2023.1.0,<2026.0.0",
    "ansicolors>=1.1.8,<2.0.0",
    "colorama>=0.4.6,<1.0.0",
    "pynndescent>=0.5.10,<1.0.0",
    "importlib-metadata>=6.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "hatch>=1.9.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "pytest-xvfb>=3.0.0",
    "mock>=5.1.0",
    "pre-commit>=3.6.0",
]
docs = [
    "numpydoc>=1.6.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-multiversion>=0.2.4",
    "ghp-import>=2.1.0",
]

[project.scripts]
aydin = "aydin.cli.cli:cli"

[project.entry-points."napari.manifest"]
aydin = "aydin.napari_plugin:napari.yaml"

[project.urls]
Homepage = "https://royerlab.github.io/aydin/"
"Source Code" = "https://github.com/royerlab/aydin"
"Bug Tracker" = "https://github.com/royerlab/aydin/issues"
Documentation = "https://royerlab.github.io/aydin/"

[tool.hatch.version]
path = "src/aydin/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aydin"]
exclude = ["**/tests/**", "**/demo/**", "**/__pycache__/**", "**/conftest.py"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "**/__pycache__",
]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["src/aydin"]
markers = [
    "heavy: mark test as heavy (long-running)",
    "gpu: mark test as requiring GPU",
    "unstable: mark test as unstable/flaky",
    "gui: mark test as requiring Qt GUI display",
]
qt_api = "pyqt6"
addopts = "--disable-pytest-warnings"

[tool.coverage.run]
source = ["src/aydin"]
omit = ["src/aydin/**/demo/**", "src/aydin/**/tests/**"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 40
show_missing = true
