[metadata]
name = aydin
url = https://royerlab.github.io/aydin/
download_url = https://github.com/royerlab/aydin
license = BSD 3-Clause
license_file = LICENSE.txt
description =  Aydin - Denoising but chill
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    catboost>=1.0.5
    Click==8.0.3
    czifile>=2019.7.2
    docstring-parser>=0.13
    gdown==4.2.0
    googledrivedownloader==0.4
    importlib-metadata>=4.10.0
    jsonpickle==1.3.0
    lightgbm>=3.3.1
    napari==0.4.15
    nd2reader==3.3.0
    numba>=0.55.1
    numexpr==2.8.1
    numpy>=1.19.2
    protobuf==3.20.1
    pynndescent==0.5.5
    PyQt5>=5.15.6
    QDarkStyle==3.0.2
    qtpy>=1.11.2
    scikit-image==0.18.3
    scipy==1.7.3
    tensorflow==2.8.1
    torch==1.10.1
    keras==2.8.0
    zarr==2.4.0
    imagecodecs==2022.2.22
    memoization==0.4.0

[options.extras_require]
bundle =
    catboost==1.0.5
    Click==8.0.3
    czifile==2019.7.2
    docstring-parser==0.13
    gdown==4.2.0
    googledrivedownloader==0.4
    importlib-metadata==4.10.0
    jsonpickle==1.3.0
    lightgbm==3.3.1
    napari==0.4.12
    nd2reader==3.3.0
    numba==0.55.1
    numexpr==2.8.1
    numpy>=1.19.2
    protobuf==3.20.1
    pynndescent==0.5.5
    PyQt5==5.15.6
    QDarkStyle==3.0.2
    qtpy==1.11.2
    scikit-image==0.18.3
    scipy==1.7.3
    tensorflow==2.8.1
    torch==1.10.1
    keras==2.8.0
    zarr==2.4.0
    imagecodecs==2022.2.22
    memoization==0.4.0
